# declension-bot

./: .gitignore  emojis.db  main.py  pyproject.toml  pytest.ini  requirements.txt  tests.py
.github/workflows/: test_endpoints.yml
cogs/: Conjugation.py  Declension.py  Dictionaries.py  Expressions.py  FlashCard.py  ReversoContext.py  Songs.py  Tests.py  Tools.py  declension.py
others/: customerrors.py  menu.py  utils.py  views.py
others/prompt/: menu.py
tests/: test_endpoints.py
