[tool.poetry]
name = "uneprojektveryaleatorioquejaniewiemquest-cedquemceamicomio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
data = "^0.4"
movies = "^1.0.0"
aiomysql = "^0.0.20"
"discord.py" = "^1.4.0"
frontend = "^0.0.3"
Wand = "^0.6.2"
requests = "^2.24.0"
pyparsing = "^2.4.7"
ghostscript = "^0.6"
pdf2image = "^1.13.1"
convertapi = "^1.3.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
